Fixed body overflow issue for image on login/create account

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  height: 75%;
+  height: 100%;
   width: 100%;
 }
 .userform {
@@ -32,4 +32,7 @@
 
 #view-project {
   margin: 20px;
+}
+body {
+  overflow: hidden;
 }
